--- a/app.css
+++ b/app.css
@@ -82,11 +82,13 @@ main {
   -webkit-overflow-scrolling: touch;
   z-index: 100;
   overflow: hidden;
+  height: 100%;
 }
 
 .page {
   position: absolute;
   width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   opacity: 1;
@@ -117,14 +119,20 @@ main {
 }
 
 .slide_left {
-  -webkit-transform: translateX(-100%) scale(.8);
+  -webkit-transform: translateX(-80%);
   opacity: .8;
 }
 
 .scroller {
   height: 100%;
   -webkit-overflow-scrolling: touch;
-  margin-top: 50px;
+  padding-top: 40px;
+  padding-bottom: 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 header {
