--- a/partials/new.html
+++ b/partials/new.html
@@ -118,7 +118,7 @@
           <h2>Permissions set:</h2>
           <ul>
             <li ng-repeat="person in buildCampaign.permissions.accepted">
-              <button class="btn">resend</button>{{person.first}} {{person.last}} <small class="status">permission level: {{person.level}}</small>
+              {{person.first}} {{person.last}} <small class="status">permission level: {{person.level}}</small>
             </li>
           </ul>
           <h2>Pending Invites:</h2>
