--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -46,15 +46,12 @@
     </div>
     <ul id="campaign_list">
       <li ng-repeat="campaign in campaignList">
-        <div class="campaign_info btn_set vert">
-          <button class="btn"  ng-click="togglePanel('social_accounts')">share!</button>
-          <a href="#/edit/{{campaign.id}}" class="btn" ng-click="resetStep()">edit</a>
-        </div>
-        <h2>{{campaign.title}} <small>- @{{campaign.handle}}</small></h2>
-        <div>
-          <p>{{campaign.description}}</p>
-        </div>
-        <div class="clear"></div>
+        <a href="#/campaign/{{campaign.id}}">
+          <h2>{{campaign.title}} <small>- @{{campaign.handle}}</small></h2>
+          <div>
+            <p>{{campaign.description}}</p>
+          </div>
+          <div class="clear"></div></a>
       </li>
     </ul>
   </section>
