--- a/partials/campaign_info.html
+++ b/partials/campaign_info.html
@@ -4,54 +4,44 @@
   <h2 ng-bind="editCampaign.title"></h2>
   <div class="dropdown closed">
     <button class="btn left"  ng-click="togglePanel('social_accounts')">share!</button>
-    <a href="#/campaign/{{campaign.id}}/edit" class="btn left" ng-click="resetStep()">edit</a>
+    <a href="#/campaign/{{editCampaign.id}}/edit" class="btn left" ng-click="resetStep()">edit</a>
   </div>
 </header>
 
 <div class="scroller_wrapper">
   <div class="scroller">
-    <h3>RECENT MESSAGES</h3>
-    <ul class="instances">
-      <li ng-repeat="instance in editCampaign.instances" class="instance">
-        <aside class="btn_set vert">
-          <button class="btn">add note</button>
-          <button class="btn">important</button>
-        </aside>
-<!--    <a href="#/campaign/{{editCampaign.id}}/instance/{{instance.id}}">-->
-        <article>
-          <button ng-click="hearIt(instance)" class="btn heard heard_{{instance.heard}}" ui-if="instance.author != 'You'">heard!</button>
-          <h4 ng-bind="instance.author"></h4>
-          <time ng-bind="instance.time"></time>
-          <p ng-bind="instance.text" ng-click="expandReplies($index)"></p>
-          <ul class="replies" ng-show="isExpanded($index)">
-            <li ng-repeat="comment in instance.comments | limitTo:(instance.comments.length-2)" class="reply">
-              <button ng-click="hearIt(comment)" class="btn heard heard_{{comment.heard}}" ui-if="comment.author != 'You'">heard!</button>
-              <h5 ng-bind="comment.author"></h5>
-              <p ng-bind="comment.text"></p>
-            </li>
-          </ul>
-          <ul class="replies">
-            <li class="reply" ng-show="instance.comments[(instance.comments.length-2)]">
-              <button ng-click="hearIt(instance.comments[(instance.comments.length-2)])" class="btn heard heard_{{instance.comments[(instance.comments.length-2)].heard}}" ui-if="instance.comments[(instance.comments.length-2)].author != 'You'">heard!</button>
-              <h5 ng-bind="instance.comments[(instance.comments.length-2)].author"></h5>
-              <p ng-bind="instance.comments[(instance.comments.length-2)].text"></p>
-            </li>
-            <li class="reply" ng-show="instance.comments[(instance.comments.length-1)]">
-              <button ng-click="hearIt(instance.comments[(instance.comments.length-1)])" class="btn heard heard_{{instance.comments[(instance.comments.length-1)].heard}}" ui-if="instance.comments[(instance.comments.length-1)].author != 'You'">heard!</button>
+    <section>
+      <h3>Notifications</h3>
+      <ul class="notifications">
+        <li>11 rewards have been redeemed.</li>
+        <li>Your ratings have improved this week.</li>
+      </ul>
+    </section>
+    <section>
+      <h3>RECENT MESSAGES</h3>
+      <ul class="instances">
+        <li ng-repeat="instance in editCampaign.instances" class="instance">
+          <a href="#/campaign/{{editCampaign.id}}/instance/{{instance.id}}">
+            <article>
               <h5 ng-bind="instance.comments[(instance.comments.length-1)].author"></h5>
               <p ng-bind="instance.comments[(instance.comments.length-1)].text"></p>
-            </li>
-          </ul>
-          <form ng-submit="addReply(newCommentText, instance.comments)">
-            <input type="text" name="new_comment" ng-model="newCommentText" />
-            <button class="btn"type="submit">reply</button>
-          </form>
-        </article>
-<!--        </a>-->
-      </li>
-    </ul>
-    <h3>AT A GLANCE</h3>
-    <figure class="big_number" ng-bind="editCampaign.instances.length"></figure>
-    <figcaption>total instances of fdbk.</figcaption>
+            </article>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h3>AT A GLANCE</h3>
+      <div class="data_section row">
+        <figure class="data centered col-1-3">
+          <div class="big_number">2</div>
+          <figcaption>responses</figcaption>
+        </figure>
+        <ul class="data text col-2-3">
+          <li>Your engagement has gone down this week.</li>
+          <li>Your ratings have improved this week.</li>
+        </ul>
+      </div>
+    </section>
   </div>
 </div>
