--- a/partials/inbox.html
+++ b/partials/inbox.html
@@ -4,41 +4,41 @@
 </header>
 <div class="scroller_wrapper">
   <div class="scroller">
-    <ul class="instances">
-      <li ng-repeat="instance in instances" class="instance">
+    <ul class="instances" ng-repeat="campaign in campaignList">
+      <li ng-repeat="instance in campaign.instances" class="instance">
         <aside class="btn_set vert">
-          <button class="btn">add note</button>
-          <button class="btn">important</button>
+          <button class="btn">!</button>
         </aside>
         <article>
-          <h3>{{instance.author}}</h3>
-          <time datetime="2013-02-13T01:15-05:00">{{instance.time}}</time>
-          <p>
-            <button ng-click="hearIt(instance)" class="btn heard heard_{{instance.heard}}">heard!</button>
-            <button class="btn heard" ui-if="comment.author != 'You'">share</button>
-            {{instance.text}}
-          </p>
-          <ul class="replies">
-            <li class="reply" ng-repeat="comment in instance.comments">
-              <article>
-                <h4>{{comment.author}}</h4>
-                <time datetime="2013-02-13T01:15-05:00">{{comment.time}}</time>
-                <p>
-                  <button ng-click="hearIt(comment)" class="btn heard heard_{{comment.heard}}" ui-if="comment.author != 'You'">heard!</button>
-                  <button class="btn heard" ui-if="comment.author != 'You'">share</button>
-                  {{comment.text}}
-                </p>
-              </article>
-            </li>
-            <li>
-              <form ng-submit="addReply(newCommentText, instance.comments)">
-                <input type="text" name="new_comment" ng-model="newCommentText" />
-                <button class="btn"type="submit">reply</button>
-              </form>
+          <button ng-click="hearIt(instance)" class="btn heard heard_{{instance.heard}}" ui-if="instance.author != 'You'">heard!</button>
+          <h4 ng-bind="instance.author"></h4>
+          <time ng-bind="instance.time"></time>
+          <p ng-bind="instance.text" ng-click="expandReplies($index)"></p>
+          <ul class="replies" ng-show="isExpanded($index)">
+            <li ng-repeat="comment in instance.comments | limitTo:(instance.comments.length-2)" class="reply">
+              <button ng-click="hearIt(comment)" class="btn heard heard_{{comment.heard}}" ui-if="comment.author != 'You'">heard!</button>
+              <h5 ng-bind="comment.author"></h5>
+              <p ng-bind="comment.text"></p>
             </li>
           </ul>
+          <ul class="replies">
+            <li class="reply" ng-show="instance.comments[(instance.comments.length-2)]">
+              <button ng-click="hearIt(instance.comments[(instance.comments.length-2)])" class="btn heard heard_{{instance.comments[(instance.comments.length-2)].heard}}" ui-if="instance.comments[(instance.comments.length-2)].author != 'You'">heard!</button>
+              <h5 ng-bind="instance.comments[(instance.comments.length-2)].author"></h5>
+              <p ng-bind="instance.comments[(instance.comments.length-2)].text"></p>
+            </li>
+            <li class="reply" ng-show="instance.comments[(instance.comments.length-1)]">
+              <button ng-click="hearIt(instance.comments[(instance.comments.length-1)])" class="btn heard heard_{{instance.comments[(instance.comments.length-1)].heard}}" ui-if="instance.comments[(instance.comments.length-1)].author != 'You'">heard!</button>
+              <h5 ng-bind="instance.comments[(instance.comments.length-1)].author"></h5>
+              <p ng-bind="instance.comments[(instance.comments.length-1)].text"></p>
+            </li>
+          </ul>
+          <form class="reply" ng-submit="addReply(newCommentText, instance.comments)">
+            <input type="text" name="new_comment" ng-model="newCommentText" />
+            <button class="btn"type="submit">reply</button>
+          </form>
         </article>
-      </li>  
+      </li>
     </ul>
   </div>
 </div>
